syntax = "proto3";

package protocol;

option java_package = "org.linda.protos";
option java_outer_classname = "Contract";
option go_package = "github.com/lindaprotocol/grpc-api-gateway/pkg/lindapb";

import "core/Linda.proto";

message AccountCreateContract {
  bytes owner_address = 1;
  bytes account_address = 2;
  AccountType type = 3;
}

message AccountUpdateContract {
  bytes account_name = 1;
  bytes owner_address = 2;
}

message SetAccountIdContract {
  bytes account_id = 1;
  bytes owner_address = 2;
}

message TransferContract {
  bytes owner_address = 1;
  bytes to_address = 2;
  int64 amount = 3;
}

message TransferAssetContract {
  bytes asset_name = 1;
  bytes owner_address = 2;
  bytes to_address = 3;
  int64 amount = 4;
}

message VoteAssetContract {
  bytes owner_address = 1;
  repeated bytes vote_address = 2;
  bool support = 3;
  int32 count = 5;
}

message VoteWitnessContract {
  message Vote {
    bytes vote_address = 1;
    int64 vote_count = 2;
  }
  bytes owner_address = 1;
  repeated Vote votes = 2;
  bool support = 3;
}

message WitnessCreateContract {
  bytes owner_address = 1;
  bytes url = 2;
}

message WitnessUpdateContract {
  bytes owner_address = 1;
  bytes update_url = 12;
}

message AssetIssueContract {
  message FrozenSupply {
    int64 frozen_amount = 1;
    int64 frozen_days = 2;
  }
  bytes owner_address = 1;
  bytes name = 2;
  bytes abbr = 3;
  int64 total_supply = 4;
  repeated FrozenSupply frozen_supply = 5;
  int32 lind_num = 6;
  int32 num = 8;
  int64 start_time = 9;
  int64 end_time = 10;
  int32 vote_score = 16;
  bytes description = 20;
  bytes url = 21;
  int64 free_asset_net_limit = 22;
  int64 public_free_asset_net_limit = 23;
  int64 public_free_asset_net_usage = 24;
  int64 public_latest_free_net_time = 25;
  int32 precision = 26;
}

message ParticipateAssetIssueContract {
  bytes owner_address = 1;
  bytes to_address = 2;
  bytes asset_name = 3;
  int64 amount = 4;
}

message DeployContract {
  bytes owner_address = 1;
  bytes script = 2;
}

message FreezeBalanceContract {
  bytes owner_address = 1;
  int64 frozen_balance = 2;
  int64 frozen_duration = 3;
  ResourceCode resource = 4;
  bytes receiver_address = 5;
}

message UnfreezeBalanceContract {
  bytes owner_address = 1;
  ResourceCode resource = 2;
  bytes receiver_address = 3;
}

message UnfreezeAssetContract {
  bytes owner_address = 1;
}

message WithdrawBalanceContract {
  bytes owner_address = 1;
}

message UpdateAssetContract {
  bytes owner_address = 1;
  bytes description = 2;
  bytes url = 3;
  int64 new_limit = 4;
  int64 new_public_limit = 5;
}

message ProposalCreateContract {
  bytes owner_address = 1;
  map<int64, int64> parameters = 2;
}

message ProposalApproveContract {
  bytes owner_address = 1;
  int64 proposal_id = 2;
  bool is_add_approval = 3;
}

message ProposalDeleteContract {
  bytes owner_address = 1;
  int64 proposal_id = 2;
}

message ExchangeCreateContract {
  bytes owner_address = 1;
  bytes first_token_id = 2;
  int64 first_token_balance = 3;
  bytes second_token_id = 4;
  int64 second_token_balance = 5;
}

message ExchangeInjectContract {
  bytes owner_address = 1;
  int64 exchange_id = 2;
  bytes token_id = 3;
  int64 quant = 4;
}

message ExchangeWithdrawContract {
  bytes owner_address = 1;
  int64 exchange_id = 2;
  bytes token_id = 3;
  int64 quant = 4;
}

message ExchangeTransactionContract {
  bytes owner_address = 1;
  int64 exchange_id = 2;
  bytes token_id = 3;
  int64 quant = 4;
  int64 expected = 5;
}

message AccountPermissionUpdateContract {
  bytes owner_address = 1;
  Permission owner = 2;
  Permission witness = 3;
  repeated Permission actives = 4;
}

message FreezeBalanceV2Contract {
  bytes owner_address = 1;
  int64 frozen_balance = 2;
  ResourceCode resource = 3;
}

message UnfreezeBalanceV2Contract {
  bytes owner_address = 1;
  int64 unfreeze_balance = 2;
  ResourceCode resource = 3;
}

message WithdrawExpireUnfreezeContract {
  bytes owner_address = 1;
}

message DelegateResourceContract {
  bytes owner_address = 1;
  ResourceCode resource = 2;
  int64 balance = 3;
  bytes receiver_address = 4;
  bool lock = 5;
  int64 lock_period = 6;
}

message UnDelegateResourceContract {
  bytes owner_address = 1;
  ResourceCode resource = 2;
  int64 balance = 3;
  bytes receiver_address = 4;
}

message CancelAllUnfreezeV2Contract {
  bytes owner_address = 1;
}

message UpdateBrokerageContract {
  bytes owner_address = 1;
  int32 brokerage = 2;
}

message MarketSellAssetContract {
  bytes owner_address = 1;
  bytes sell_token_id = 2;
  int64 sell_token_value = 3;
  bytes buy_token_id = 4;
  int64 buy_token_value = 5;
}

message MarketCancelOrderContract {
  bytes owner_address = 1;
  bytes order_id = 2;
}